--- a/catPhotoApp/index.html
+++ b/catPhotoApp/index.html
@@ -71,5 +71,9 @@
   <footer>
     <p>No Copyright - <a href="https://www.freecodecamp.org">freeCodeCamp.org</a></p>
   </footer>
+  <div style= "text-align: center; padding:0.5rem">
+    *This tutorial project was created by <a href="https://www.freecodecamp org">freeCodeCamp</a> and is a part of their responsive Web Design certification course.
+   </div>
+
 </body>
 </html>
